Fixed Home Depot Sequence Map bug where cells would overflow the grid

--- a/Home_Depot/Sequence_Map/style.css
+++ b/Home_Depot/Sequence_Map/style.css
@@ -9,12 +9,12 @@ body , html {
   background: rgba( var( --white ) , 1 );
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   justify-content: flex-start;
   margin: 0;
   overflow: hidden;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 }
 
 * {
@@ -45,10 +45,10 @@ body , html {
 
 grid {
   display: grid;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   padding: 8px;
-  width: 100vw;
+  width: 100%;
 
   cell {
     height: 100%;
